--- a/PrimerTrabajo/app/src/main/res/layout/activity_main.xml
+++ b/PrimerTrabajo/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/wallpmegaman">
+        android:layout_height="match_parent">
 
     </LinearLayout>
 
@@ -32,6 +31,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/NombreEsteban"
+        android:padding="10dp"
+        android:id="@+id/Integrante3"
+        android:textStyle="italic"
+        android:layout_below="@+id/Integrante2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,7 +62,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Andres Felipe Sanchez Arango"
+        android:text="@string/NombreAndres"
         android:id="@+id/Integrante2"
         android:padding="10dp"
         android:layout_below="@+id/Integrante1"
@@ -126,13 +136,13 @@
         android:id="@+id/CampoDeTextoIngresarIP"
         android:padding="10dp"
         android:hint="@string/HintIngreseIP"
-        android:layout_below="@+id/Integrante2"
-        android:layout_alignLeft="@+id/BotonConexionIP"
-        android:layout_alignStart="@+id/BotonConexionIP"
         android:gravity="center"
         android:inputType="text"
         android:background="@drawable/rounded_edittext"
-        android:layout_marginRight="14dp" />
+        android:layout_below="@+id/Integrante2"
+        android:layout_alignLeft="@+id/BarraDeControl3"
+        android:layout_alignStart="@+id/BarraDeControl3"
+        android:layout_marginTop="79dp" />
 
     <TextView
         android:layout_width="wrap_content"
